--- a/MyBucketList/app/src/main/res/values/strings.xml
+++ b/MyBucketList/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Bucket List</string>
+    <string name="things_todo_content_description">Things to do</string>
+    <string name="places_to_go_content_description">Places to go</string>
+    <string name="things_to_do_image_label">Things to do</string>
+    <string name="places_to_go_label">Places to go</string>
 </resources>
