Completed items xml for individual bucket list item design Added todo items to todo_things array in ThingsToDo class Added places_to_go items to places_to_go array in PlacesToGo class Changed todo/placesToGo card description

--- a/MyBucketList/app/src/main/res/values/strings.xml
+++ b/MyBucketList/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="places_to_go_content_description">Places to go</string>
     <string name="things_to_do_image_label">Things to do</string>
     <string name="places_to_go_label">Places to go</string>
+    <string name="bucket_list_image">bucket_list_image</string>
 </resources>
